internal/ast/testdata/tests/errors/mappings/no_space_after_mapping.rql
mappingtest using Demo {
    a -> b
}
